5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1646_2449.log
== TEST (2019-04-10 11:33:13) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

x=c*e-b*f/a*e-b*d
y=a*f-c*d/a*e-b*d
if(x<0)
  print("Nao tem solucao")
-- ERROR:
File "XXXX", line 10
    if(x<0)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:33:36) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

x=c*e-b*f/a*e-b*d
y=a*f-c*d/a*e-b*d
print("Nao tem solucao")
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 11:33:50) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

x=c*e-b*f/a*e-b*d
y=a*f-c*d/a*e-b*d
print("Nao tem solucao")
-- EXECUTION TIME:
0.139976
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Nao tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:35:54) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

if(x=c*e-b*f/a*e-b*d;y=a*f-c*d/a*e-b*d) 
   print("Nao tem solucao")
-- ERROR:
File "XXXX", line 8
    if(x=c*e-b*f/a*e-b*d;y=a*f-c*d/a*e-b*d) 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:36:23) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

if(x=c*e-b*f/a*e-b*d;y=a*f-c*d/a*e-b*d): 
   print("Nao tem solucao")
-- ERROR:
File "XXXX", line 8
    if(x=c*e-b*f/a*e-b*d;y=a*f-c*d/a*e-b*d): 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:36:49) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

if(x=c*e-b*f/a*e-b*d + y=a*f-c*d/a*e-b*d): 
   print("Nao tem solucao")
-- ERROR:
File "XXXX", line 8
    if(x=c*e-b*f/a*e-b*d + y=a*f-c*d/a*e-b*d): 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:37:03) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

if(x=c*e-b*f/a*e-b*d < y=a*f-c*d/a*e-b*d): 
   print("Nao tem solucao")
-- ERROR:
File "XXXX", line 8
    if(x=c*e-b*f/a*e-b*d < y=a*f-c*d/a*e-b*d): 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:40:08) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

if(a*x+b*y=c,d*x+e*y=y):
   print("Nao tem solucao")
-- ERROR:
File "XXXX", line 8
    if(a*x+b*y=c,d*x+e*y=y):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:40:27) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

if(a*x+b*y=c<d*x+e*y=y):
   print("Nao tem solucao")
-- ERROR:
File "XXXX", line 8
    if(a*x+b*y=c<d*x+e*y=y):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 11:40:47) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

 print("Nao tem solucao")
-- ERROR:
File "XXXX", line 8
    print("Nao tem solucao")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:07:22) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))

if:
   print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 8
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:10:40) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=((c*e - b*y)/(a*e - b*d))
y=((a*f - c*d)/(a*e - b*d))

print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=((c*e - b*y)/(a*e - b*d))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:13:44) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if(x != y)
x=((c*e - b*y)/(a*e - b*d))
y=((a*f - c*d)/(a*e - b*d))

print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 7
    if(x != y)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 00:16:35) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=((c*e - b*y)/(a*e - b*d))
y=((a*f - c*d)/(a*e - b*d))
if(x != y):
   print("Tem solucao")
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=((c*e - b*y)/(a*e - b*d))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:44) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*y)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x != y):
   print("Tem solucao")
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*y)/(a*e - b*d)))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:44) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x != y):
   print("Tem solucao")
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:55) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x != y):
   print("Tem solucao")
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:49) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x != y):
   print("Tem solucao")
else:
	print("Nao tem solucao")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:47) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if("Nao tem solucao"):
   print(x)
else:
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:41:11) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if("Nao tem solucao"):
   print(x,y)
else:
	print(x,y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:41:49) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if("Nao tem solucao"):
   print(x,y)
else:
	print(x,y)
	
-- EXECUTION TIME:
0.14109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:42:23) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if("Nao tem solucao"):
   print(x)
	print(y)
else:
	print(x)
	print(y)
	
-- ERROR:
File "XXXX", line 11
    print(y)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:42:59) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if("Nao tem solucao"):
   print(x)
	print(y)

	
-- ERROR:
File "XXXX", line 11
    print(y)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:46:17) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x!=y):
   print(x)
else:
	print(x)

	
-- EXECUTION TIME:
0.155097
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:33:51) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
print(x)
print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:34:53) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
print(x)
print(y)

	
-- EXECUTION TIME:
0.233751
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:41:51) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x==y)
print(x)
print(y)

	
-- ERROR:
File "XXXX", line 9
    if(x==y)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:42:12) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x==y):
   print(x)
   print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:43:17) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x!=y):
   print(x)
   print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:43:40) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x!=y):
   print(x)
   print(y)

	
-- EXECUTION TIME:
0.181238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:44:29) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
x!=0
y!=0
if(x==y):
   print(x)
   print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 17:45:35) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
x!=0
y!=0
print(x)
print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 17:45:57) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
x!=0
y!=0
print(x)
print(y)

	
-- EXECUTION TIME:
0.247335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:15:10) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
x!=0
y!=0
if(x!=y):
	print(x) 	
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:15:40) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
x!=0
y!=0
if(x!=y):
	print(x) 	
	print(y)

	
-- EXECUTION TIME:
0.207891
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:16:02) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x!=y):
	print(x) 	
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:16:10) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x=(((c*e - b*f)/(a*e - b*d)))
y=(((a*f - c*d)/(a*e - b*d)))
if(x!=y):
	print(x) 	
	print(y)

	
-- EXECUTION TIME:
0.177542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:19:09) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
y=(((a*f - c*d)/(a*e - b*d)))
if(x!=y):
	x=(((c*e - b*f)/(a*e - b*d)))	
	print(x) 
if(y!=x):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=(((a*f - c*d)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:20:04) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
y=(((a*f - c*d)/(a*e - b*d)))
if(x==y):
	x=(((c*e - b*f)/(a*e - b*d)))	
	print(x) 
if(y!=x):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- EXECUTION TIME:
0.180663
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    y=(((a*f - c*d)/(a*e - b*d)))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:20:11) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
y=(((a*f - c*d)/(a*e - b*d)))
if(x==y):
	x=(((c*e - b*f)/(a*e - b*d)))	
	print(x) 
if(y!=x):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=(((a*f - c*d)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:21:08) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
y=(((a*f - c*d)/(a*e - b*d)))
if(x = y):
	x=(((c*e - b*f)/(a*e - b*d)))	
	print(x) 
if(y!=x):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
File "XXXX", line 8
    if(x = y):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:21:28) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
y=(((a*f - c*d)/(a*e - b*d)))
if(x != y):
	x=(((c*e - b*f)/(a*e - b*d)))	
	print(x) 
if(y != x):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y=(((a*f - c*d)/(a*e - b*d)))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:22:26) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if(x != 0):
	x=(((c*e - b*f)/(a*e - b*d)))	
	print(x) 
if(y != 0):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x != 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:24:16) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
x!=0
y!=0
if(x):
	x=(((c*e - b*f)/(a*e - b*d)))	
	print(x) 
if(y):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x!=0
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:25:05) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if(x):
	x=(((c*e - b*f)/(a*e - b*d)))	
	print(x) 
if(y):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- EXECUTION TIME:
0.141761
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    if(x):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:25:08) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if(x):
	x=(((c*e - b*f)/(a*e - b*d)))	
	print(x) 
if(y):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:38) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if(x==y):
	x=(((c*e - b*f)/(a*e - b*d)))	 
	y=(((a*f - c*d)/(a*e - b*d)))
	print(x)
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x==y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:17) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if(x!=y):
	x=(((c*e - b*f)/(a*e - b*d)))	 
	y=(((a*f - c*d)/(a*e - b*d)))
	print(x)
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x!=y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:13:40) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if(x!=y):
	x=(((c*e - b*f)/(a*e - b*d)))	 
	y=(((a*f - c*d)/(a*e - b*d)))
	print(x)
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x!=y):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:15:20) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if("Nao tem solucao"):
	x=(((c*e - b*f)/(a*e - b*d)))	 
	y=(((a*f - c*d)/(a*e - b*d)))
	print(x)
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))	 
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 00:15:51) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if("Nao tem solucao"):
	x=(((c*e - b*f)/(a*e - b*d)))	 
	y=(((a*f - c*d)/(a*e - b*d)))
	print(x)
	print(y)

	
-- EXECUTION TIME:
0.20339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))	 
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:18:23) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if("Nao tem solucao"):
	x=(((c*e - b*f)/(a*e - b*d)))	 
	print(x)
if("Nao tem solucao"):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))	 
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 00:18:57) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if("Nao tem solucao"):
	x=(((c*e - b*f)/(a*e - b*d)))	 
	print(x)
if("Nao tem solucao"):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- EXECUTION TIME:
0.135383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x=(((c*e - b*f)/(a*e - b*d)))	 
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 00:19:42) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if(x == "Nao tem solucao"):
	x=(((c*e - b*f)/(a*e - b*d)))	 
	print(x)
if(y == "Nao tem solucao"):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x == "Nao tem solucao"):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 11:12:36) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
if(x == "Nao tem solucao"):
	x=(((c*e - b*f)/(a*e - b*d)))	 
	print(x)
if(y == "Nao tem solucao"):
	y=(((a*f - c*d)/(a*e - b*d)))
	print(y)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(x == "Nao tem solucao"):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:43:41) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
g=a*e-b*d

if(g==0):
	print("Nao tem solucao")


	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 14:47:29) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
g=a*e-b*d

if(g==0):
	print("Nao tem solucao")
if(g!=0):
	x=(c*e-b*f)/(a*e-b*d)
	y=(a*f-c*d)/(a*e-b*d)
	print(x)	
	print(y)


	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:48:06) 
-- CODE:
a=float(input("Digite a: "))
b=float(input("Digite b: "))
c=float(input("Digite c: "))
d=float(input("Digite d: "))
e=float(input("Digite e: "))
f=float(input("Digite f: "))
g=a*e-b*d

if(g==0):
	print("Nao tem solucao")
if(g!=0):
	x=(c*e-b*f)/(a*e-b*d)
	y=(a*f-c*d)/(a*e-b*d)
	print(x)	
	print(y)


	
-- EXECUTION TIME:
0.576767
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
